--- a/APAutomation/WebContent/index.html
+++ b/APAutomation/WebContent/index.html
@@ -5,8 +5,8 @@
 <meta http-equiv='Content-Type' content='text/html;charset=UTF-8' />
 
 <script
-	src="resources/sap-ui-core.js "
-	id="sap-ui-bootstrap" data-sap-ui-libs="sap.m"
+	src="https://sapui5.netweaver.ondemand.com/1.32.7/resources/sap-ui-core.js "
+	id="sap-ui-bootstrap" data-sap-ui-libs="sap.m, sap.suite.ui.commons,sap.ui.layout, sap.ui.comp"
 	data-sap-ui-xx-bindingSyntax="complex"
 	data-sap-ui-resourceroots='{
 				"apautomation":"./apautomation",
